# pokemon-api-challenge

./: .gitignore  Makefile  README.md  pyproject.toml  result.json  run.py
.github/workflows/: test.yaml
poke_challenge/: __init__.py  abstract.py  constants.py  controller.py  exceptions.py  models.py  repository.py  schema.py  views.py
tests/: test_pokemon.py
